--- a/index.html
+++ b/index.html
@@ -116,6 +116,164 @@
       </div>
     </section>
 
+    <!-- Project Section -->
+    <section id="projects">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="title-box text-center">
+                <h3 class="title-a">
+                 Projects
+                </h3>
+                <p class="subtitle-a">
+                  Here is a preview of some projects I worked on:
+                </p>
+                <div class="line-mf"></div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="service-box">
+                <div class="service-ico">
+                  <span class="ico-circle"><a href="https://github.com/Emmanuel-Kip/farmer-sconnect"><i class="bi bi-briefcase"></i></a></span>
+                </div>
+                <div class="service-content">
+                  <h2 class="s-title">FarmerConnect Website</h2>
+                  <p class="s-description text-center">
+                   We came up with an ecommerce website to enable farmers to connect with their market.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="service-box">
+                <div class="service-ico">
+                  <span class="ico-circle"><a href="https://github.com/JeanWasike/Oop2Project.git"><i class="bi bi-card-checklist"></i></a></span>
+                </div>
+                <div class="service-content">
+                  <h2 class="s-title">Academic Management System</h2>
+                  <p class="s-description text-center">
+                    Developed a system where parents and teachers are able to update and view examination marks.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="service-box">
+                <div class="service-ico">
+                  <span class="ico-circle"><a href="https://github.com/JeanWasike/TravelAgency.git"><i class="bi bi-bar-chart"></i></a></span>
+                </div>
+                <div class="service-content">
+                  <h2 class="s-title">Travel Agency Web App</h2>
+                  <p class="s-description text-center">
+                   Designed and developed a fully functional website for a travel agency as pasrt of a school project.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="service-box">
+                <div class="service-ico">
+                  <span class="ico-circle"><a href="https://jeanwasike.github.io/duka/"><i class="bi bi-cart4"></i></a></span>
+                </div>
+                <div class="service-content">
+                  <h2 class="s-title">Duka</h2>
+                  <p class="s-description text-center">
+                  A website for a shoe store designed as part of a design class assignment using HTML and CSS.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="service-box">
+                <div class="service-ico">
+                  <span class="ico-circle"><a href="https://jeanwasike.github.io/akaname/"><i class="bi bi-people-fill"></i></a></span>
+                </div>
+                <div class="service-content">
+                  <h2 class="s-title">Akan Name Generator</h2>
+                  <p class="s-description text-center">
+                    A website that generates Akan names from inputs. Developed using Javascript.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="service-box">
+                <div class="service-ico">
+                  <span class="ico-circle"><a href="https://jeanwasike.github.io/highlife/"><i class="bi bi-emoji-laughing"></i></a></span>
+                </div>
+                <div class="service-content">
+                  <h2 class="s-title">HighLife</h2>
+                  <p class="s-description text-center">
+                  Designed a mental health website using HTML, CSS and Javascript as part of a learning project.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Experience -->
+      <section id="experience">
+        <div class="container">
+            <h2> Experience </h2>
+            <div>
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p></p>
+            </div>
+        </div>
+      </section>
+
+      <!-- Contact -->
+      <div class="section-counter paralax-mf bg-image" id="contact" style="background-image: url(bg4.avif)">
+        <div class="overlay-mf"></div>
+        <div class="container position-relative">
+          
+          <div class="row">
+            <div class="col-sm-3 col-lg-3">
+              <div class="counter-box counter-box pt-4 pt-md-0">
+                <div class="counter-ico">
+                  <span class="ico-circle"><a href="https://www.instagram.com/_gloria.jeanne/"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></i></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-3 col-lg-3">
+              <div class="counter-box counter-box pt-4 pt-md-0">
+                <div class="counter-ico">
+                  <span class="ico-circle"><a href="https://www.linkedin.com/in/jeanwasike"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></i></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-3 col-lg-3">
+              <div class="counter-box counter-box pt-4 pt-md-0">
+                <div class="counter-ico">
+                  <span class="ico-circle"><a href="https://github.com/JeanWasike"><span class="ico-circle"><i class="bi bi-github"></i></span></a></i></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-3 col-lg-3">
+              <div class="counter-box counter-box pt-4 pt-md-0">
+                <div class="counter-ico">
+                  <span class="ico-circle"><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></i></span>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
   </main>
 </body>
 </html>
