style: add css styling for headline and about section

--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Jean Wasike</title>
+
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
   <!-- Header -->
   <header id="header">
-    <div>
- 
-      <h1 class="logo"><a href="index.html">Portfolio</a></h1>
-
-      <nav id="navbar" class="navbar">
+    <div class="navbar">
+      <nav id="navbar"></nav>
         <ul>
           <li><a class="nav-link" href="#welcome-section">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
@@ -28,20 +27,19 @@
     </div>
   </header>
 
-  <!-- Headline Section-->
-  <div id="welcome-section">
-    <div class="welcome-image">
-        <img src="" alt="">
-    </div>
-    <div class="welcome-content">
-      <div class="table-cell">
-          <h1>I am Jean Gloria</h1>
-          <h3><span>Software Developer</span></p>
-      </div>
-    </div>
-  </div>
-
   <main id="main">
+     <!-- Headline Section-->
+    <div id="welcome-section">
+        <div class="welcome-img-section column-item">
+            <img src="assets/image.jpg" alt="" class="welcome-image">
+        </div>
+        <div class="welcome-content column-item">
+            <div class="table-cell">
+                <h1>Jean Gloria</h1>
+                <h3><span>Software Developer</span></p>
+            </div>
+        </div>
+    </div>
 
     <!--About Section -->
     <section id="about">
@@ -57,60 +55,47 @@
                 team of dedicated individuals to achieve different goals.
             </p>
         </div>
+        <h2 id="tech">My Skills</h2>
         <div class="tech-skills">
             <div id="front-dev">
-                <img src="" alt="">
+                <img src="assets/frontend.png" alt="">
                 <p>Front-end Development</p>
             </div>
             <div id="back-dev">
-                <img src="" alt="">
+                <img src="assets/backend.png" alt="">
                 <p>Backend Development</p>
             </div>
             <div id="ai-ml">
-                <img src="" alt="">
+                <img src="assets/ml.png" alt="">
                 <p>Artificial Intelligence and Machine Learning</p>
             </div>
             <div id="ai-iot">
-                <img src="" alt="">
+                <img src="assets/iot.png" alt="">
                 <p>AIoT Development</p>
             </div>
         </div>
+        <h2 id="technology">Technologies</h2>
         <div class="technologies">
             <div id="html">
-                <img src="" alt="">
-                <p>HTML</p>
+                <img src="assets/html.png" alt="">
             </div>
             <div id="css">
-                <img src="" alt="">
-                <p>CSS</p>
+                <img src="assets/css.png" alt="">
             </div>
             <div id="js">
-                <img src="" alt="">
-                <p>JS</p>
-            </div>
-            <div id="angular">
-                <img src="" alt="">
-                <p>Angular JS</p>
-            </div>
-            <div id="node">
-                <img src="" alt="">
-                <p>Node js</p>
+                <img src="assets/js.png" alt="">
             </div>
             <div id="php">
-                <img src="" alt="">
-                <p>PHP</p>
+                <img src="assets/php.png" alt="">
             </div>
             <div id="python">
-                <img src="" alt="">
-                <p>Python</p>
+                <img src="assets/python.png" alt="">
             </div>
             <div id="C++">
-                <img src="" alt="">
-                <p>C++</p>
+                <img src="assets/cpp.png" alt="">
             </div>
             <div id="java">
-                <img src="" alt="">
-                <p>Java</p>
+                <img src="assets/java.png" alt="">
             </div>
         </div>
       </div>
