fix: fixed styling for headline

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="welcome-content column-item">
             <div class="table-cell">
-                <h1>Jean Gloria</h1>
+                <h1>Hi! I'm Jean Gloria</h1>
                 <h3><span>Software Developer</span></p>
             </div>
         </div>
